overflow fix

--- a/css/photo.css
+++ b/css/photo.css
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 .galleria {
 	height: 100vh;
 	width: 100vw;
